<resources>
    <string name="app_name">DoNote</string>
    <string name="action_settings">Settings</string>
    <string name="addNewItem">Add a new item...</string>
    <string name="add">Add</string>
    <string name="title_activity_item_edit">ItemEditActivity</string>
    <string name="save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="note">Note</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="extra_notes">Extra Notes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="due_date">Due Date</string>
    <string name="inactive">Inactive</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reminder_status">Remind?</string>
    <string name="priority">Priority</string>
</resources>
