<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/done_white_48dp"
        android:title="@string/action_done"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/clear_white_48dp"
        android:title="@string/action_cancel"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete_item"
        android:icon="@drawable/delete_white_48dp"
        android:title="@string/action_delete"
        app:showAsAction="always"/>

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
