<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_item_edit"
    tools:context="com.tryand.codepathtodo.ItemEditActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/note"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/note_status"
        android:layout_below="@id/editText">
        <TextView
            android:id="@+id/note_status_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note_status_radio"
            android:orientation="horizontal"
            android:weightSum="1"
            android:background="#C8EFFA"
            android:layout_toRightOf="@+id/note_status_lbl"
            android:layout_below="@id/editText">
            <RadioButton android:id="@+id/status_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:layout_weight=".5"/>
            <RadioButton android:id="@+id/status_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_weight=".5"/>
        </RadioGroup>
    </LinearLayout>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/due_date"
        android:layout_marginTop="10dp"
        android:layout_below="@id/note_status">
        <TextView
            android:id="@+id/due_date_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/date_field"
            android:layout_below="@id/note_status">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/date_input"
                android:onClick="showDatepicker"
                android:clickable="true"
                android:editable="false"
                android:hint="MM/DD/YYYY hh:mm"
                android:layout_centerHorizontal="true"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date_select"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/date_range_black_18dp"
                android:onClick="showDatepicker"/>
        </LinearLayout>
    </LinearLayout>




    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/save"-->
        <!--android:id="@+id/button"-->
        <!--android:onClick="onAddItem"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginBottom="55dp" />-->


<!--<TextView-->
    <!--android:id="@+id/note_text_lbl"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/note"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentTop="true"/>-->
<!--<EditText-->
    <!--android:id="@+id/note_text"-->
    <!--android:hint="@string/note"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_toRightOf="@+id/note_text_lbl"-->
    <!--android:layout_alignParentTop="true"/>-->

<!--<EditText-->
    <!--android:id="@+id/note_status"-->
    <!--android:hint="@string/status"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@android:drawable/editbox_background"-->
    <!--android:layout_toRightOf="@+id/note_status_lbl"-->
    <!--android:layout_below="@id/note_text"/>-->
</RelativeLayout>
